objects/vlocity_cmt__AttributeAssignment__c.object
<CustomObject>
    <description>The assignment of an Attribute to an object such as an Account, Contact or Product. Product attributes define the default configuration for the product to which they are assigned.</description>
    <fields>
        <fullName>vlocity_cmt__AddDate__c</fullName>
        <description>Date when the attribute was first assigned to the account, contact, product or other object.</description>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeAdjustmentComments__c</fullName>
        <label>Adjustment Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeAdjustmentUnits__c</fullName>
        <label>Adjustment Units</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Vlocity Attribute Category copied from the attribute at the time the attribute was assigned.</description>
        <label>Attribute Category</label>
        <referenceTo>vlocity_cmt__AttributeCategory__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCloneable__c</fullName>
        <description>Formula: Value of the Cloneable checkbox from the assigned attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__IsCloneable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Cloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeConfigurable__c</fullName>
        <description>Formula: Value of the Configurable checkbox from the assigned attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__Configurable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplayNameOverride__c</fullName>
        <description>Attribute name to display for this attribute when shown for this object. Overrides the name defined on the attribute itself. For example, &quot;Case Color&quot; for an attribute named &quot;Color&quot;.</description>
        <label>Attribute Name Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplayName__c</fullName>
        <description>Formula: Calculated display name showing the overridden name if present, otherwise showing the Name field from the associated attribute.</description>
        <formula>IF( ISBLANK( vlocity_cmt__AttributeDisplayNameOverride__c) ,vlocity_cmt__AttributeId__r.Name,vlocity_cmt__AttributeDisplayNameOverride__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplaySequence__c</fullName>
        <description>Display sequence of this attribute among other attributes assigned to the same parent object.</description>
        <label>Attribute Display Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeFilterable__c</fullName>
        <description>Formula: Value of the Filterable checkbox from the assigned attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__Filterable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeGroupType__c</fullName>
        <formula>TEXT(vlocity_cmt__AttributeId__r.vlocity_cmt__AttributeGroupType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Vlocity Attribute assigned to the parent object.</description>
        <label>Attribute</label>
        <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeName__c</fullName>
        <description>DEPRECATED. Formula: Value of the Name field from the assigned attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeUniqueCode__c</fullName>
        <description>Formula: Value of the Attribute Code field from the assigned attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryCode__c</fullName>
        <description>Formula: Value of the Attribute Category Code field based on the copied Attribute Category ID.</description>
        <formula>vlocity_cmt__AttributeCategoryId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryDisplaySequence__c</fullName>
        <description>Formula: Value of the Attribute Category Display Sequence field based on the copied Attribute Category ID.</description>
        <formula>vlocity_cmt__AttributeCategoryId__r.vlocity_cmt__DisplaySequence__c</formula>
        <label>Category Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryName__c</fullName>
        <description>Formula: Value of the Attribute Category Name field based on the copied Attribute Category ID.</description>
        <formula>vlocity_cmt__AttributeCategoryId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationDetail__c</fullName>
        <label>Configuration Detail</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationStages__c</fullName>
        <label>Configuration Stages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomConfigUiTemplate__c</fullName>
        <description>Information describing the Vlocity UI Template or HTML/JavaScript to render when users go to configure this attribute value. Overrides the default defined for the attribute. Useful when the user needs to interact with an external system to choose the attribute value (such as picking a phone number for a new mobile phone).</description>
        <label>Custom Config UI Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <description>Additional Data attached to the attribute.</description>
        <label>Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPicklistEntryId__c</fullName>
        <description>DEPRECATED</description>
        <label>Default Picklist Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPicklistValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID identifying the default value for this attribute from the governing Vlocity Picklist.</description>
        <label>Default Picklist Value</label>
        <referenceTo>vlocity_cmt__PicklistValue__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <description>Category display sequence copied from the attribute category at the time the attribute was assigned.</description>
        <label>Category Display Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndStory__c</fullName>
        <description>ID of the context object during which the attribute was removed such as an Event, Campaign or Case.</description>
        <label>Removed During</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExcludedPicklistEntryIds__c</fullName>
        <description>DEPRECATED</description>
        <label>Excluded Picklist Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExcludedPicklistValues__c</fullName>
        <description>Data identifying picklist values excluded from those available in the governing Vlocity Picklist. Customizes the valid values available for the attribute on the assigned product.</description>
        <label>Excluded Picklist Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FormatMask__c</fullName>
        <description>Format mask governing data entry into this attribute value.</description>
        <label>Format Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this attribute assigned to this product has one or more rules governing its configuration.</description>
        <label>Has Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <description>Help text to display when end users are configuring this attribute. Overrides the help text defined for the attribute itself.</description>
        <label>Help Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveAssignment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the attribute assignment is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <description>Formula: Value of the Active flag from the assigned attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__ActiveFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For product attributes, indicates if this attribute is configurable. Overrides the Configurable value from the attribute itself.</description>
        <label>Is Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if attribute values need to be encrypted.</description>
        <label>Is Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this product attribute will be hidden from end users in the order capture UI.</description>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if this attribute assignment should not be part of Asset.</description>
        <label>Is Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotTranslatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if attribute values should not be translated.</description>
        <label>Is Not Translatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Attribute Assignment record is an override record that changes the definition of the attribute assignment in the context of some offer or other product.</description>
        <label>IsOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsQueryDriven__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query Driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this product attribute is read-only for end-users in the order capture UI.</description>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a value for this attribute is required for the assigned parent object (usually a product).</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupFilter__c</fullName>
        <label>Lookup Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Object</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Attribute Assignments (Lookup Object Type)</relationshipLabel>
        <relationshipName>AttributeAssignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <description>ID of the parent object to which the attribute is assigned.</description>
        <externalId>true</externalId>
        <label>Assigned To Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectLink__c</fullName>
        <description>Formula: Link to the parent object to which this attribute is assigned.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;vlocity_cmt__ObjectId__c, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectType__c</fullName>
        <description>Type of sObject to which this attribute is assigned.</description>
        <label>Assigned To Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Vlocity Picklist that provides the valid values for this attribute on this parent object. Overrides any Vlocity Picklist defined at the attribute level.</description>
        <label>Picklist</label>
        <referenceTo>vlocity_cmt__Picklist__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueryCode__c</fullName>
        <label>Query Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueryLabel__c</fullName>
        <label>Query Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RemoveDate__c</fullName>
        <description>Date when the attribute was removed from the account, contact, product or other object.</description>
        <label>Date Removed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RemovedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this assignment has been removed from the object.</description>
        <label>Attribute Has Been Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleData__c</fullName>
        <label>Rule</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleMessage__c</fullName>
        <label>Rule Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartStory__c</fullName>
        <description>ID of the context in which the attribute was assigned such as an Event, Campaign or Case.</description>
        <label>Added During</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StyleClass__c</fullName>
        <description>Reserved for future use.</description>
        <label>Style Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UIDisplayType__c</fullName>
        <description>Identifies the UI display control to use for this attribute on the assigned parent object.</description>
        <label>UI Display Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidValuesData__c</fullName>
        <description>A list of valid values for a customizable product attribute.</description>
        <label>Valid Values Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueDataType__c</fullName>
        <description>Data type of this attribute such as text, number, percent or checkbox. Overrides the Value Type field on the assigned Vlocity Attribute.</description>
        <label>Value Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Multi Picklist</fullName>
                </value>
                <value>
                    <fullName>Multivalue Picklist</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueDecoder__c</fullName>
        <description>Used for representing the decoding rule of the multi-value picklist field type value. For example, an auto insurance liability could be represented as 100/300/50 (per person/ per incident/ property). Such special values should be broken down into value and value decoder, ‘100/300/50&apos; should be saved in the Value (Value__c) and the decoding rule &apos;per person/ per incident/ property’ should be stored in the Value Decoder (ValueDecoder__c).</description>
        <label>Value Decoder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueDescription__c</fullName>
        <description>Description of the value assigned to this attribute.</description>
        <label>Value Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueInNumber__c</fullName>
        <description>Formula: value returned as a numeric data type if numeric.</description>
        <formula>VALUE(vlocity_cmt__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <description>Value of this attribute. For example, attribute strength (0-5), or a text value &quot;Jimmy&quot;.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attribute Assignment</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>vlocity_cmt__AttributeUniqueCode__c</columns>
        <columns>vlocity_cmt__ObjectLink__c</columns>
        <columns>vlocity_cmt__AttributeDisplayName__c</columns>
        <columns>vlocity_cmt__IsOverride__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>